--- a/0x1A-application_server/gunicorn.conf
+++ b/0x1A-application_server/gunicorn.conf
@@ -1,12 +1,18 @@
-description "Gunicorn application server running AirBnB_clone_v4"
-author "Brennan D Baraban"
+[Unit]
+Description=Gunicorn instance to serve airbnb
+After=network.target
 
-start on runlevel [2345]
-stop on runlevel [!2345]
-
-respawn
-setuid ubuntu
-setgid www-data
-
-chdir /home/ubuntu/AirBnB_clone_v4
-exec gunicorn --workers 3 --bind 0.0.0.0:5003 web_dynamic.2-hbnb:app >> /tmp/airbnb-access.log 2> /tmp/airbnb-error.logirbnb-access.log
+[Service]
+User=ubuntu
+Group=ubuntu
+Type=simple
+WorkingDirectory=/home/ubuntu/AirBnB_clone_v4/
+Restart=on-failure
+RestartSec=10
+TimeoutStopSec=5
+KillMode=mixed
+ExecStart=/home/ubuntu/AirBnB_clone_v4/venv/bin/gunicorn --workers 3 --bind 10.247.192.130:5003 web_dynamic.2-hbnb:app
+StandardOutput=file:/tmp/airbnb-access.log
+StandardError=file:/tmp/airbnb-error.log
+[Install]
+WantedBy=multi-user.target
